--- a/app/src/main/res/layout/activity_rummikub.xml
+++ b/app/src/main/res/layout/activity_rummikub.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HalligalliActivity">
+    tools:context=".RummikubActivity">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HALLI GALLI"
+        android:text="RUMMIKUB"
         android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
