--- a/app/src/main/res/layout/activity_bang.xml
+++ b/app/src/main/res/layout/activity_bang.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BangActivity">
+    tools:context=".gamedescription.BangActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
