--- a/app/src/main/res/layout/activity_halligalli.xml
+++ b/app/src/main/res/layout/activity_halligalli.xml
@@ -33,7 +33,13 @@
                 android:text="@string/tohome"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
+<!--
+            <VideoView
+                android:id="@+id/videoview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/button_back" />
+-->
             <ImageView
                 android:id="@+id/imagehalligalli0"
                 android:layout_width="match_parent"
