--- a/app/src/main/res/layout/activity_davinchcode.xml
+++ b/app/src/main/res/layout/activity_davinchcode.xml
@@ -34,6 +34,12 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <VideoView
+                android:id="@+id/videodavinchcode"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:layout_constraintTop_toBottomOf="@id/button_back" />
+
             <ImageView
                 android:id="@+id/imagedavinch0"
                 android:layout_width="match_parent"
@@ -42,7 +48,7 @@
                 android:contentDescription="@string/davinch0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/button_back"
+                app:layout_constraintTop_toBottomOf="@id/videodavinchcode"
                 app:srcCompat="@drawable/davinch0" />
 
             <TextView
