--- a/app/src/main/res/layout/activity_halligalli.xml
+++ b/app/src/main/res/layout/activity_halligalli.xml
@@ -33,13 +33,13 @@
                 android:text="@string/tohome"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-<!--
+
             <VideoView
-                android:id="@+id/videoview"
+                android:id="@+id/videohalligalli"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="300dp"
                 app:layout_constraintTop_toBottomOf="@id/button_back" />
--->
+
             <ImageView
                 android:id="@+id/imagehalligalli0"
                 android:layout_width="match_parent"
@@ -48,7 +48,7 @@
                 android:contentDescription="@string/halligalli0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/button_back"
+                app:layout_constraintTop_toBottomOf="@id/videohalligalli"
                 app:srcCompat="@drawable/halligalli0" />
 
             <TextView
